==> HansenDai/Bootload_period2/driver/tim_delay.c <==
#include <stdint.h>
#include "stm32f4xx.h"
#include "stm32f4xx_ll_rcc.h"
#include "stm32f4xx_ll_tim.h"
#include "tim_delay.h"

static volatile uint64_t tim_tick_count;
static tim_periodic_callback_t periodic_callback;

static uint32_t tim6_get_clock_hz(void)
{
    LL_RCC_ClocksTypeDef clocks;

    LL_RCC_GetSystemClocksFreq(&clocks);
    if (LL_RCC_GetAPB1Prescaler() == LL_RCC_APB1_DIV_1)
    {
        return clocks.PCLK1_Frequency;
    }

    return clocks.PCLK1_Frequency * 2U;
}

void tim_delay_init(void)
{
    LL_TIM_InitTypeDef tim_init;
    uint32_t apb1_tim_freq_mhz = tim6_get_clock_hz() / 1000000U;

    LL_TIM_StructInit(&tim_init);
    tim_init.Prescaler = (uint16_t)(apb1_tim_freq_mhz - 1U);
    tim_init.Autoreload = 999U;
    tim_init.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
    tim_init.CounterMode = LL_TIM_COUNTERMODE_UP;
    LL_TIM_Init(TIM6, &tim_init);
    LL_TIM_ClearFlag_UPDATE(TIM6);
    LL_TIM_EnableIT_UPDATE(TIM6);
    LL_TIM_EnableCounter(TIM6);

    NVIC_SetPriority(TIM6_DAC_IRQn, 5);
    NVIC_EnableIRQ(TIM6_DAC_IRQn);
}

uint64_t tim_now(void)
{
    uint64_t now, last_count;
    do {
        last_count = tim_tick_count;
        now = tim_tick_count + LL_TIM_GetCounter(TIM6);
    } while (last_count != tim_tick_count);
    return now;
}

uint64_t tim_get_us(void)
{
    return tim_now();
}

uint64_t tim_get_ms(void)
{
    return tim_now() / 1000;
}

void tim_delay_us(uint32_t us)
{
    uint64_t now = tim_now();
    while (tim_now() - now < (uint64_t)us);
}

void tim_delay_ms(uint32_t ms)
{
    uint64_t now = tim_now();
    while (tim_now() - now < (uint64_t)ms * 1000);
}

void tim_register_periodic_callback(tim_periodic_callback_t callback)
{
    periodic_callback = callback;
}

void TIM6_DAC_IRQHandler(void)
{
    if (LL_TIM_IsActiveFlag_UPDATE(TIM6))
    {
        LL_TIM_ClearFlag_UPDATE(TIM6);
        tim_tick_count += 1000;
        if (periodic_callback)
            periodic_callback();
    }
}
